--- a/HAW_Tool/Properties/Settings.settings
+++ b/HAW_Tool/Properties/Settings.settings
@@ -26,8 +26,9 @@
     <Setting Name="ObligatoryRegexPatterns" Type="System.Collections.Specialized.StringCollection" Scope="Application">
       <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;string&gt;.*?P\d+\s*\/.*?&lt;/string&gt;
+  &lt;string&gt;.*?P\d*\s*\/.*?&lt;/string&gt;
   &lt;string&gt;.*?H\d+&lt;/string&gt;
+  &lt;string&gt;P$&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
   </Settings>
