--- a/HAW_Tool/app.config
+++ b/HAW_Tool/app.config
@@ -66,8 +66,9 @@
         <value>
           <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
             xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-            <string>.*?P\d+\s*\/.*?</string>
+            <string>.*?P\d*\s*\/.*?</string>
             <string>.*?H\d+</string>
+            <string>P$</string>
           </ArrayOfString>
         </value>
       </setting>
