Experimenting with Changes and CouchDB

--- a/HAW_Tool/Properties/Settings.settings
+++ b/HAW_Tool/Properties/Settings.settings
@@ -31,5 +31,11 @@
   &lt;string&gt;P$&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
+    <Setting Name="GoogleUsername" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="GooglePassword" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
