--- a/HAW_Tool/app.config
+++ b/HAW_Tool/app.config
@@ -1,62 +1,66 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0"?>
 <configuration>
   <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="HAW_Tool.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="HAW_Tool.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="HAW_Tool.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="HAW_Tool.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
     </sectionGroup>
   </configSections>
 
   <system.serviceModel>
     <bindings>
       <webHttpBinding>
-        <binding name="largeHAWBinding" maxReceivedMessageSize="2000000" />
+        <binding name="largeHAWBinding" maxReceivedMessageSize="2000000"/>
       </webHttpBinding>
     </bindings>
 
     <client>
-      <endpoint address="http://haw.seveq.de/rest"
-                binding="webHttpBinding"
-                bindingConfiguration="largeHAWBinding"
-                behaviorConfiguration="haw"
-                contract="HAW_Tool.HAW.REST.IHAWRest"
-                name="HAWRest" />
+      <endpoint address="http://haw.seveq.de/rest" behaviorConfiguration="haw" binding="webHttpBinding" bindingConfiguration="largeHAWBinding" contract="HAW_Tool.HAW.REST.IHAWRest" name="HAWRest"/>
     </client>
-
+    
     <behaviors>
       <endpointBehaviors>
         <behavior name="haw">
-          <dataContractSerializer maxItemsInObjectGraph="2000000" />
+          <dataContractSerializer maxItemsInObjectGraph="2000000"/>
           <webHttp/>
         </behavior>
       </endpointBehaviors>
+      
     </behaviors>
+    
+    
   </system.serviceModel>
 
   <userSettings>
     <HAW_Tool.Properties.Settings>
       <setting name="HAWSettingsXML" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="FilterByGroup" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="DeactivatedEventsXML" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="BackgroundColor" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Username" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="PublishedChangesRespected" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="ScheduleFiles" serializeAs="String">
-        <value />
+        <value/>
+      </setting>
+      <setting name="GoogleUsername" serializeAs="String">
+        <value/>
+      </setting>
+      <setting name="GooglePassword" serializeAs="String">
+        <value/>
       </setting>
     </HAW_Tool.Properties.Settings>
   </userSettings>
@@ -64,8 +68,7 @@
     <HAW_Tool.Properties.Settings>
       <setting name="ObligatoryRegexPatterns" serializeAs="Xml">
         <value>
-          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
             <string>.*?P\d*\s*\/.*?</string>
             <string>.*?H\d+</string>
             <string>P$</string>
@@ -74,4 +77,4 @@
       </setting>
     </HAW_Tool.Properties.Settings>
   </applicationSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
