--- a/HAW_Tool/app.config
+++ b/HAW_Tool/app.config
@@ -9,15 +9,46 @@
     </sectionGroup>
   </configSections>
 
+  <system.diagnostics>
+    <trace autoflush="true" />
+    <sources>
+      <source name="System.ServiceModel"
+              switchValue="Information, ActivityTracing"
+              propagateActivity="true" >
+        <listeners>
+          <add name="sdt" type="System.Diagnostics.XmlWriterTraceListener"
+               initializeData="V:\\Trace.svclog" />
+        </listeners>
+      </source>
+    </sources>
+  </system.diagnostics>
+  
   <system.serviceModel>
     <bindings>
       <webHttpBinding>
         <binding name="largeHAWBinding" maxReceivedMessageSize="2000000"/>
       </webHttpBinding>
+      <netPeerTcpBinding>
+        <binding name="PeerTcpConfig" port="10384">
+          <security mode="None"></security>
+          <resolver mode="Custom">
+            <custom address="net.tcp://212.72.163.81:8000/ChatServer" binding="netTcpBinding" bindingConfiguration="TcpConfig"></custom>
+          </resolver>
+        </binding>
+      </netPeerTcpBinding>
+      <netTcpBinding>
+        <binding name="TcpConfig">
+          <security mode="None"></security>
+        </binding>
+      </netTcpBinding>
     </bindings>
 
     <client>
       <endpoint address="http://haw.seveq.de/rest" behaviorConfiguration="haw" binding="webHttpBinding" bindingConfiguration="largeHAWBinding" contract="HAW_Tool.HAW.REST.IHAWRest" name="HAWRest"/>
+      <endpoint name="ChatEndPoint" address="net.p2p://chatMesh/ChatServer"
+                binding="netPeerTcpBinding"
+                bindingConfiguration="PeerTcpConfig"
+                contract="ChatClient.IChatService"></endpoint>
     </client>
     
     <behaviors>
